--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fields.curiumx.fields.SearchActivity">
+    tools:context="com.fields.curiumx.fields.SearchActivity"
+    android:id="@+id/search_activity">
 
     <SearchView
         android:id="@+id/search"
@@ -48,14 +49,14 @@
         android:focusable="true">
 
         <Button
-            android:id="@+id/users_button"
+            android:id="@+id/fields_button"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/cardview_light_background"
 
-            android:text="Users" />
+            android:text="Fields" />
 
         <Button
             android:id="@+id/teams_button"
@@ -70,14 +71,31 @@
              />
 
         <Button
-            android:id="@+id/fields_button"
+            android:id="@+id/users_button"
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/cardview_light_background"
-            android:text="Fields"
+            android:text="Users"
              />
     </LinearLayout>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/add_new_field"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/search"
+        android:layout_marginTop="2dp"
+        >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/not_finding_field"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:layout_margin="4dp"/>
+    </android.support.v7.widget.CardView>
+
 
 </android.support.constraint.ConstraintLayout>
