--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,15 +8,41 @@
 
 
     <TextView
+    android:id="@+id/position_role_text"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/profilePhoto"
+    android:layout_marginTop="28dp"
+    android:layout_marginStart="12dp"
+    android:layout_marginEnd="8dp"
+    android:textStyle="bold"
+        android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/bio_text1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/position_role_text"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:visibility="gone"/>
+
+
+    <TextView
         android:id="@+id/friends"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:layout_gravity="center"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/usersTeam"
+        app:layout_constraintTop_toBottomOf="@id/bio_text1"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="8dp"
         app:layout_constraintStart_toEndOf="@id/trainings"
         android:background="@drawable/rounded_view"
         android:padding="10dp"
@@ -29,12 +55,12 @@
         android:background="@drawable/rounded_view"
         android:padding="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/usersTeam"
+        app:layout_constraintTop_toBottomOf="@id/bio_text1"
         android:layout_marginTop="30dp"
         android:textStyle="bold"
         android:text="1000 reputation"
         android:elevation="3dp"
-        android:layout_marginStart="12dp"/>
+        android:layout_marginStart="8dp"/>
 
     <TextView
         android:id="@+id/trainings"
@@ -43,12 +69,25 @@
         android:background="@drawable/rounded_view"
         android:padding="10dp"
         app:layout_constraintStart_toEndOf="@id/reputation"
-        app:layout_constraintTop_toBottomOf="@id/usersTeam"
+        app:layout_constraintTop_toBottomOf="@id/bio_text1"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="8dp"
         android:elevation="3dp"
         android:textStyle="bold"
         android:text="20 trainings"/>
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:background="@color/DividerColor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/profilePhoto"
+        android:visibility="gone"/>
 
 
 
@@ -66,10 +105,9 @@
         android:id="@+id/profilePhoto"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/field_photo3"
+        android:src="@drawable/profileim"
         android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
