--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,104 +4,110 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fields.curiumx.fields.ProfileActivity">
+    tools:context="com.fields.curiumx.fields.ProfileActivity"
+    >
 
-    <ImageView
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/gradient"
         android:layout_width="match_parent"
-        android:layout_height="260dp"
-        android:elevation="3dp"
-        android:src="@drawable/gradient_bg"
+        android:layout_height="wrap_content">
 
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        <ImageView
+            android:id="@+id/gradient1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:elevation="3dp"
+            android:src="@drawable/gradient_bg"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/position_role_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@id/gradient"
-        app:layout_constraintStart_toStartOf="@id/gradient"
-        app:layout_constraintTop_toBottomOf="@id/divider"
-        android:elevation="3dp"
-        android:gravity="center"
+        <TextView
+            android:id="@+id/position_role_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:elevation="3dp"
 
-         />
+            android:gravity="center"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider" />
 
     <TextView
         android:id="@+id/bio_text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginTop="8dp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@id/gradient"
-        app:layout_constraintStart_toStartOf="@id/gradient"
-        app:layout_constraintTop_toBottomOf="@id/position_role_text"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="8dp"
         android:elevation="3dp"
         android:gravity="center"
         android:maxLines="1"
-         />
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/position_role_text"
+        app:layout_constraintBottom_toBottomOf="@id/gradient"/>
 
     <TextView
         android:id="@+id/friends"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="150dp"
         android:background="@drawable/rounded_view"
         android:elevation="5dp"
         android:padding="10dp"
+        android:text="Friends"
         android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintEnd_toStartOf="@id/profile"
+        android:visibility="visible"
+
+        app:layout_constraintBottom_toBottomOf="@+id/gradient"
+        app:layout_constraintEnd_toStartOf="@+id/profile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/gradient"
-        app:layout_constraintBottom_toBottomOf="@id/gradient"/>
+        app:layout_constraintVertical_bias="0.13" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/rep"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_view"
         android:elevation="5dp"
-        app:layout_constraintTop_toBottomOf="@id/usersTeam"
-        app:layout_constraintStart_toStartOf="@id/gradient"
-        app:layout_constraintEnd_toEndOf="@id/gradient"
-        android:layout_marginTop="4dp">
-    <TextView
-        android:id="@+id/reputation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1000"
-        android:textStyle="bold"
-        android:visibility="visible"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:paddingStart="7dp"
-        android:paddingTop="3dp"
-        android:paddingBottom="3dp"
-        android:paddingEnd="3dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/usersTeam">
 
-        />
+        <TextView
+            android:id="@+id/reputation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="3dp"
+            android:paddingEnd="3dp"
+            android:paddingStart="7dp"
+            android:paddingTop="3dp"
+            android:text="1000"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+
+            />
 
         <ImageView
-            android:paddingTop="5dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:paddingBottom="5dp"
             android:paddingEnd="5dp"
             android:paddingStart="1dp"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:paddingTop="5dp"
             android:src="@drawable/reps"
-            app:layout_constraintStart_toEndOf="@id/reputation"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintStart_toEndOf="@id/reputation"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -110,28 +116,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginBottom="150dp"
         android:background="@drawable/rounded_view"
         android:elevation="5dp"
         android:padding="10dp"
         android:text="20 trainings"
         android:textStyle="bold"
         android:visibility="visible"
-        app:layout_constraintStart_toEndOf="@id/profile"
-        app:layout_constraintEnd_toEndOf="@id/gradient"
+        app:layout_constraintBottom_toBottomOf="@id/gradient"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/profile"
         app:layout_constraintTop_toTopOf="@id/gradient"
-        app:layout_constraintBottom_toBottomOf="@id/gradient" />
+        app:layout_constraintVertical_bias="0.13" />
 
     <FrameLayout
         android:id="@+id/profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="140dp"
+        android:layout_marginTop="8dp"
+
         android:elevation="5dp"
-        app:layout_constraintBottom_toBottomOf="@id/gradient"
-        app:layout_constraintEnd_toEndOf="@id/gradient"
-        app:layout_constraintStart_toStartOf="@id/gradient"
-        app:layout_constraintTop_toTopOf="@id/gradient">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/gradient">
 
 
         <ImageView
@@ -150,20 +156,59 @@
             android:visibility="visible" />
     </FrameLayout>
 
+        <TextView
+            android:id="@+id/userName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:elevation="4dp"
+            android:text="@string/username"
+            android:textAppearance="@android:style/TextAppearance.Material.Medium"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profile" />
+
+        <TextView
+            android:id="@+id/usersTeam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:elevation="4dp"
+            android:text="Team"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userName" />
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginEnd="64dp"
+            android:layout_marginStart="64dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/colorPrimaryDark"
+            android:elevation="3dp"
+            app:layout_constraintDimensionRatio=""
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rep" />
+    </android.support.constraint.ConstraintLayout>
 
     <LinearLayout
         android:id="@+id/activityBar"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:clickable="true"
+        android:elevation="6dp"
         android:focusable="true"
         android:transitionName="bar"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:elevation="6dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
 
         <ImageButton
@@ -205,137 +250,83 @@
         android:id="@+id/testCurrentField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="@id/gradient"
-        app:layout_constraintTop_toBottomOf="@id/div"
-        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:textStyle="bold"
-        android:visibility="gone"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_view"
-        android:padding="10dp"
         android:elevation="3dp"
         android:gravity="center"
-        />
+        android:padding="10dp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gradient" />
 
     <TextView
         android:id="@+id/challenges"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_view"
         android:backgroundTint="@color/colorPrimary"
-        android:padding="10dp"
         android:elevation="3dp"
-        app:layout_constraintTop_toBottomOf="@id/testCurrentField"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="Challenges"
-        android:layout_marginTop="8dp"
-        android:textStyle="bold"
         android:gravity="center"
-        />
+        android:padding="10dp"
+        android:text="Challenges"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@id/badges"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/testCurrentField" />
 
     <TextView
         android:id="@+id/badges"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_view"
         android:backgroundTint="@color/colorPrimary"
-        android:padding="10dp"
         android:elevation="3dp"
-        app:layout_constraintTop_toBottomOf="@id/challenges"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="Badges"
-        android:layout_marginTop="8dp"
-        android:textStyle="bold"
         android:gravity="center"
-        />
-
-
-    <TextView
-        android:id="@+id/userName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:elevation="4dp"
-        android:text="@string/username"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        android:padding="10dp"
+        android:text="@string/badges"
+        android:textColor="@color/black"
         android:textStyle="bold"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@id/gradient"
-        app:layout_constraintStart_toStartOf="@id/gradient"
-        app:layout_constraintTop_toBottomOf="@id/profile" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/challenges"
+        app:layout_constraintTop_toBottomOf="@id/testCurrentField" />
 
     <TextView
-        android:id="@+id/usersTeam"
-        android:layout_width="wrap_content"
+        android:id="@+id/fields_plus"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/userName"
-        app:layout_constraintStart_toStartOf="@id/gradient"
-        app:layout_constraintEnd_toEndOf="@id/gradient"
-        android:elevation="4dp"/>
-
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/colorPrimaryDark"
-        android:layout_marginStart="64dp"
-        android:layout_marginEnd="64dp"
-        app:layout_constraintTop_toBottomOf="@id/rep"
-        android:layout_marginTop="10dp"
-        android:elevation="3dp"/>
-
-    <RelativeLayout
-        android:id="@+id/div"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        app:layout_constraintTop_toBottomOf="@id/gradient"
-        android:layout_marginTop="8dp">
-
-        <TextView
-            android:id="@+id/tvText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:text="actions"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="16dp"
-            android:layout_toLeftOf="@id/tvText"
-            android:background="@color/DividerColor"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="16dp"
-            android:layout_toRightOf="@id/tvText"
-            android:background="@color/DividerColor"
-            />
-
-    </RelativeLayout>
-
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/rounded_view"
+        android:backgroundTint="@color/premium_yellow"
+        android:elevation="3dp"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/fields_plus"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/activityBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
