--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="FieldsBottomBarColor">#fdfffa</color>
     <color name="FieldsMenuItemNotSelected">#525051</color>
     <color name="DividerColor">#FFE8E8E8</color>
+    <color name="premium_yellow">#f6ff00</color>
+    <color name="black">#2d2d2d</color>
 
 
     <color name="FSQStrawberry">#E6092C</color>
