--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -30,7 +30,7 @@
 
 
     <EditText
-        android:id="@+id/display_name_change"
+        android:id="@+id/display_name_change1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/realname_text"
@@ -73,7 +73,7 @@
         android:layout_marginTop="4dp"
         android:text="@string/bio"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/display_name_change" />
+        app:layout_constraintTop_toBottomOf="@id/display_name_change1" />
 
     <Spinner
         android:id="@+id/role_spinner"
@@ -115,7 +115,7 @@
         android:id="@+id/save_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/fui_button_text_save"
+        android:text="save"
         android:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent" />
 
