--- a/app/src/main/res/layout/activity_field_detail.xml
+++ b/app/src/main/res/layout/activity_field_detail.xml
@@ -5,16 +5,44 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/FieldImage"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/field_photo3"
-        app:layout_constraintLeft_toLeftOf="parent"
+
+    <View
+        android:id="@+id/gradient2"
+        android:layout_width="match_parent"
+        android:layout_height="260dp"
+        android:background="@color/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <FrameLayout
+        android:id="@+id/field_photo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:elevation="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <ImageView
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:src="@drawable/profile_round" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/FieldImage"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:src="@drawable/field_photo3"
+            android:elevation="6dp"
+            />
+
+    </FrameLayout>
+
 
     <TextView
         android:id="@+id/fieldName"
@@ -23,19 +51,32 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        app:layout_constraintLeft_toRightOf="@id/FieldImage"
+        app:layout_constraintLeft_toRightOf="@id/field_photo"
         android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        android:text="field name"
+        /><TextView
+    android:id="@+id/amountOfPeople"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="18dp"
+    android:layout_marginTop="8dp"
+    android:textStyle="bold"
+    android:textSize="18sp"
+    android:textAppearance="@android:style/TextAppearance.Material.Medium"
+    app:layout_constraintTop_toBottomOf="@id/fieldName"
+    app:layout_constraintLeft_toRightOf="@id/field_photo"
+    android:visibility="visible"
+    android:text="amount of people"
 
-    <TextView
-        android:id="@+id/fieldDistance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="97dp"
-        android:textStyle="bold"/>
+    />
+
+
+
+
 
     <ImageButton
         android:id="@+id/imTrainingHereButton"
@@ -60,22 +101,7 @@
 
         />
 
-    <TextView
-        android:id="@+id/amountOfPeople"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="8dp"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
-       app:layout_constraintTop_toBottomOf="@id/fieldName"
-        app:layout_constraintLeft_toRightOf="@id/FieldImage"
-        android:visibility="visible"
 
-        />
 
     <ProgressBar
         android:id="@+id/progress_bar"
