--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,14 +7,19 @@
     tools:context="com.fields.curiumx.fields.SearchActivity"
     android:id="@+id/search_activity">
 
+
     <SearchView
         android:id="@+id/search"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="60dp"
-        app:layout_constraintTop_toBottomOf="@id/activityBar"
-        android:background="@color/cardview_light_background"
-
-        />
+        android:layout_marginEnd="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/rounded_view"
+        android:elevation="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/area_name_thing" />
 
 
     <TextView
@@ -31,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/search"
+        android:layout_marginTop="8dp"
         >
 
     </com.fields.curiumx.fields.EmptyRecyclerView>
@@ -46,7 +52,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:clickable="true"
-        android:focusable="true">
+        android:focusable="true"
+        android:elevation="5dp">
 
         <Button
             android:id="@+id/fields_button"
@@ -81,21 +88,67 @@
              />
     </LinearLayout>
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/add_new_field"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/search"
-        android:layout_marginTop="2dp"
-        >
+
     <TextView
+        android:id="@+id/add_new_field"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_view"
+        android:backgroundTint="@color/colorPrimary"
+        android:elevation="1dp"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/not_finding_field"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"/>
+
+    <LinearLayout
+        android:id="@+id/area_name_thing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/not_finding_field"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:layout_margin="4dp"/>
-    </android.support.v7.widget.CardView>
+        android:elevation="3dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/activityBar"
+        app:layout_constraintBottom_toTopOf="@id/search"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        >
+
+        <Button
+            android:id="@+id/field_by_name"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_view"
+            android:text="@string/field_name" />
+
+        <Button
+            android:id="@+id/field_by_area"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="1dp"
+            android:background="@drawable/rounded_view"
+            android:text="@string/field_area" />
+
+
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
