--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -19,7 +19,10 @@
         android:elevation="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/area_name_thing" />
+        app:layout_constraintTop_toBottomOf="@id/area_name_thing"
+        android:paddingBottom="6dp"
+        android:paddingEnd="2dp"
+        android:paddingStart="2dp"/>
 
 
     <TextView
