--- a/app/src/main/res/layout/activity_field_detail.xml
+++ b/app/src/main/res/layout/activity_field_detail.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
+<android.support.constraint.ConstraintLayout
+    android:id="@+id/gradient2"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/colorPrimary"
+    android:elevation="1dp">
 
-    <View
-        android:id="@+id/gradient2"
-        android:layout_width="match_parent"
-        android:layout_height="260dp"
-        android:background="@color/colorPrimary"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
 
     <FrameLayout
         android:id="@+id/field_photo"
@@ -37,9 +35,8 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_gravity="center"
-            android:src="@drawable/field_photo3"
             android:elevation="6dp"
-            />
+            android:src="@drawable/field_photo3" />
 
     </FrameLayout>
 
@@ -50,29 +47,91 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        app:layout_constraintLeft_toRightOf="@id/field_photo"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent"
         android:text="field name"
-        /><TextView
-    android:id="@+id/amountOfPeople"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginStart="18dp"
-    android:layout_marginTop="8dp"
-    android:textStyle="bold"
-    android:textSize="18sp"
-    android:textAppearance="@android:style/TextAppearance.Material.Medium"
-    app:layout_constraintTop_toBottomOf="@id/fieldName"
-    app:layout_constraintLeft_toRightOf="@id/field_photo"
-    android:visibility="visible"
-    android:text="amount of people"
+        android:textAppearance="@android:style/TextAppearance.Material.Medium"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toRightOf="@id/field_photo"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    />
+
+    <TextView
+        android:id="@+id/amountOfPeople"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_view"
+        android:elevation="2dp"
+        android:gravity="center"
+        android:padding="6dp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        android:text="0 people here"
+        app:layout_constraintBottom_toBottomOf="@id/gradient2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fieldType"
+        />
+    
+    <ImageView
+        android:id="@+id/dropdown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_dropdown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/gradient2"
+        android:layout_margin="12dp"/>
+
+
+    <LinearLayout
+        android:id="@+id/area_map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_view"
+        android:elevation="2dp"
+        android:padding="5dp"
+
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/field_photo"
+        app:layout_constraintTop_toBottomOf="@id/fieldName">
+
+        <ImageView
+            android:layout_width="21dp"
+            android:layout_height="20dp"
+            android:src="@drawable/location_icon" />
+
+        <TextView
+            android:id="@+id/field_area1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:gravity="center_horizontal"
+            android:paddingEnd="4dp"
+            android:text="@string/field_area"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/fieldType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_view"
+        android:elevation="2dp"
+        android:padding="6dp"
+        android:text="Field type"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/field_photo" />
+</android.support.constraint.ConstraintLayout>
+
 
 
 
@@ -80,27 +139,25 @@
 
     <ImageButton
         android:id="@+id/imTrainingHereButton"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/location_icon"
-        app:layout_constraintBottom_toBottomOf="parent"
-        style="?android:attr/borderlessButtonStyle"
         android:background="@color/colorPrimary"
+        android:src="@drawable/location_icon"
         android:visibility="gone"
-        />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <ImageButton
         android:id="@+id/imTrainingHereNoMoreButton"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/cross"
-        style="?android:attr/borderlessButtonStyle"
         android:background="@color/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/cross"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
 
         />
-
 
 
     <ProgressBar
@@ -114,8 +171,60 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/drop"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/colorPrimary"
+        android:orientation="vertical"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/gradient2"
+        >
+
+        <TextView
+            android:id="@+id/goalCountText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="goal count"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/access"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:text="access"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:text="address"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/creator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="8dp"
+            android:text="creator"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
 
